.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:17:44 **** Rebuild of configuration Debug for project AB01 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
g++ -o AB01.exe main.o 
c:/mingw/bin/../lib/gcc/mingw32/4.8.1/../../../../mingw32/lib/libmingw32.a(main.o): In function `main':
e:\p\giaw\src\pkg\mingwrt-4.0.3-1-mingw32-src\bld/../mingwrt-4.0.3-1-mingw32-src/src/libcrt/crt/main.c:91: undefined reference to `WinMain@16'
collect2.exe: error: ld returned 1 exit status
17:18:09 **** Incremental Build of configuration Debug for project AB01 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:11:6: warning: unused variable 'z' [-Wunused-variable]
  int z = MAX(x++, y++);
      ^
..\main.c:12:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
g++ -o AB01.exe main.o 
17:18:17 **** Incremental Build of configuration Debug for project AB01 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:12:6: warning: unused variable 'z' [-Wunused-variable]
  int z = MAX(x++, y++);
      ^
..\main.c:13:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
g++ -o AB01.exe main.o 
17:18:37 **** Incremental Build of configuration Debug for project AB01 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:13:6: error: expected expression before ':' token
  std::out << z;
      ^
..\main.c:13:2: warning: label 'std' defined but not used [-Wunused-label]
  std::out << z;
  ^
..\main.c:12:6: warning: unused variable 'z' [-Wunused-variable]
  int z = MAX(x++, y++);
      ^
..\main.c:14:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
17:22:21 **** Rebuild of configuration Debug for project AB01 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.cpp" 
g++ -o AB01.exe main.o 
Info: Nothing to build for AB01
